fixed minor alignment issue with the <p>s, looks way better

--- a/module-12/myBioAssignment.css
+++ b/module-12/myBioAssignment.css
@@ -104,5 +104,5 @@ a {
 p {
     color: white;
     margin: 10px;
-    padding-top: 10%;
+    padding-top: 8%;
 }
